# multiplier

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  README.md  justfile  multiplierConfig.cmake.in  packaging.cmake  vcpkg-configuration.json  vcpkg.json
lib/: API.cpp  API.h  AST.capnp  AST.cpp  AST.h  Action.cpp  Attr.cpp  Attr.h  BloomFilter.cpp  CMakeLists.txt  CXXCtorInitializer.h  CachingEntityProvider.cpp  CachingEntityProvider.h  Compilation.cpp  Compilation.h  Compress.cpp  Compress.h  Database.cpp  Database.h  Decl.cpp  Decl.h  DeclStmtUtil.h  Entity.h  EntityImpl.cpp  EntityProvider.cpp  EntityProvider.h  Executor.cpp  File.cpp  File.h  FileImpl.cpp  FileList.cpp  Fragment.cpp  Fragment.h  FragmentEntity.h  FragmentImpl.cpp  Generator.h  Index.cpp  InvalidEntityProvider.cpp  InvalidEntityProvider.h  KeyValueStore.cpp  (+54 more)
lib/API/: API.cpp  API.h  AST.cpp  CMakeLists.txt  CachingEntityProvider.cpp  CachingEntityProvider.h  Compress.cpp  Compress.h  File.cpp  File.h  FileList.cpp  Fragment.cpp  Fragment.h  FragmentImpl.cpp  Grammar.h  Index.cpp  InvalidEntityProvider.cpp  InvalidEntityProvider.h  Macro.cpp  Macro.h  MacroSubstitution.cpp  NodeKind.h  PackedFileImpl.cpp  PackedFragmentImpl.cpp  Query.cpp  Query.h  Re2.cpp  Re2.h  RemoteEntityProvider.cpp  RemoteEntityProvider.h  SQLiteEntityProvider.cpp  SQLiteEntityProvider.h  Token.cpp  Token.h  TokenContext.cpp  TokenSubstitution.cpp  Use.cpp  Use.h  Weggli.cpp  Weggli.h
lib/AST/: AArch64SVEPcsAttr.cpp  AArch64SVEPcsAttrSpelling.cpp  AArch64VectorPcsAttr.cpp  AArch64VectorPcsAttrSpelling.cpp  AMDGPUFlatWorkGroupSizeAttr.cpp  AMDGPUFlatWorkGroupSizeAttrSpelling.cpp  AMDGPUKernelCallAttr.cpp  AMDGPUKernelCallAttrSpelling.cpp  AMDGPUNumSGPRAttr.cpp  AMDGPUNumSGPRAttrSpelling.cpp  AMDGPUNumVGPRAttr.cpp  AMDGPUNumVGPRAttrSpelling.cpp  AMDGPUWavesPerEUAttr.cpp  AMDGPUWavesPerEUAttrSpelling.cpp  APValueKind.cpp  ARMInterruptAttr.cpp  ARMInterruptAttrInterruptType.cpp  ARMInterruptAttrSpelling.cpp  ASTDumpOutputFormat.cpp  AVRInterruptAttr.cpp  AVRInterruptAttrSpelling.cpp  AVRSignalAttr.cpp  AVRSignalAttrSpelling.cpp  AbiTagAttr.cpp  AbiTagAttrSpelling.cpp  AbstractConditionalOperator.cpp  AccessSpecDecl.cpp  AccessSpecifier.cpp  AcquireCapabilityAttr.cpp  AcquireCapabilityAttrSpelling.cpp  AcquireHandleAttr.cpp  AcquireHandleAttrSpelling.cpp  AcquiredAfterAttr.cpp  AcquiredBeforeAttr.cpp  AddrLabelExpr.cpp  AddrSpaceMapMangling.cpp  AddressSpaceAttr.cpp  AddressSpaceAttrSpelling.cpp  AdjustedType.cpp  AliasAttr.cpp  (+1419 more)
lib/Analysis/: CMakeLists.txt  CallAnalysis.cpp  IRAnalysis.cpp  Taint.cpp  TokenTree.cpp  TypeAnalysis.cpp  TypecastAnalysis.cpp
lib/Common/: AST.capnp  CMakeLists.txt  Compress.cpp  Database.cpp  IndexStorage.cpp  PersistentMap.cpp  RPC.capnp  Re2.cpp  Re2.h  SQLiteStore.cpp  SQLiteStore.h  SymbolDatabase.cpp  ThreadLocal.cpp  ThreadLocal.h  Types.cpp  Weggli.cpp
lib/Datalog/: CMakeLists.txt  Functors.h  GenerateDecls.cpp  GenerateTokens.cpp  Storage.cpp  Storage.h
lib/Datalog/Server/: commands.dr  files.dr  (+4 more)
lib/Entities/: AArch64SVEPcsAttr.cpp  AArch64SVEPcsAttrSpelling.cpp  AArch64VectorPcsAttr.cpp  AArch64VectorPcsAttrSpelling.cpp  AMDGPUFlatWorkGroupSizeAttr.cpp  AMDGPUFlatWorkGroupSizeAttrSpelling.cpp  AMDGPUKernelCallAttr.cpp  AMDGPUKernelCallAttrSpelling.cpp  AMDGPUNumSGPRAttr.cpp  AMDGPUNumSGPRAttrSpelling.cpp  AMDGPUNumVGPRAttr.cpp  AMDGPUNumVGPRAttrSpelling.cpp  AMDGPUWavesPerEUAttr.cpp  AMDGPUWavesPerEUAttrSpelling.cpp  APValueKind.cpp  ARMInterruptAttr.cpp  ARMInterruptAttrInterruptType.cpp  ARMInterruptAttrSpelling.cpp  ASTDumpOutputFormat.cpp  AVRInterruptAttr.cpp  AVRInterruptAttrSpelling.cpp  AVRSignalAttr.cpp  AVRSignalAttrSpelling.cpp  AbiTagAttr.cpp  AbiTagAttrSpelling.cpp  AbstractConditionalOperator.cpp  AccessSpecDecl.cpp  AccessSpecifier.cpp  AcquireCapabilityAttr.cpp  AcquireCapabilityAttrSpelling.cpp  AcquireHandleAttr.cpp  AcquireHandleAttrSpelling.cpp  AcquiredAfterAttr.cpp  AcquiredBeforeAttr.cpp  AddrLabelExpr.cpp  AddrSpaceMapMangling.cpp  AddressSpaceAttr.cpp  AddressSpaceAttrSpelling.cpp  AdjustedType.cpp  AliasAttr.cpp  (+1370 more)
lib/Frontend/: CompilerName.cpp  ConditionalMacroDirective.cpp  DefineMacroDirective.cpp  ElseIfDefinedMacroDirective.cpp  ElseIfMacroDirective.cpp  ElseIfNotDefinedMacroDirective.cpp  ElseMacroDirective.cpp  EndIfMacroDirective.cpp  FileType.cpp  IfDefinedMacroDirective.cpp  IfMacroDirective.cpp  IfNotDefinedMacroDirective.cpp  ImportMacroDirective.cpp  IncludeLikeMacroDirective.cpp  IncludeMacroDirective.cpp  IncludeMacrosMacroDirective.cpp  IncludeNextMacroDirective.cpp  IncludePathLocation.cpp  Macro.cpp  MacroArgument.cpp  MacroConcatenate.cpp  MacroDirective.cpp  MacroExpansion.cpp  MacroKind.cpp  MacroParameter.cpp  MacroParameterSubstitution.cpp  MacroStringify.cpp  MacroSubstitution.cpp  MacroVAOpt.cpp  MacroVAOptArgument.cpp  OtherMacroDirective.cpp  PathKind.cpp  PragmaMacroDirective.cpp  TargetLanguage.cpp  TokenCategory.cpp  TokenKind.cpp  UndefineMacroDirective.cpp
lib/IR/: Attribute.h  AttributeKind.cpp  Block.cpp  CMakeLists.txt  Operation.cpp  Operation.h  OperationKind.cpp  Region.cpp  SourceIR.cpp  SourceIR.h  Type.h  TypeKind.cpp  Value.cpp
lib/Query/: AST.cpp  AST.h  CMakeLists.txt  Grammar.cpp  Grammar.h  Query.cpp  Query.h
lib/Syntex/: AST.cpp  CMakeLists.txt  Grammar.cpp  Private.h  Query.cpp
lib/Util/: Action.cpp  CMakeLists.txt  Executor.cpp  PASTA.cpp  PersistentMap.cpp  SQLiteStore.cpp  Subprocess.cpp  SymbolDatabase.cpp  WorkerPool.cpp
libraries/TobWidgets/: CMakeLists.txt
libraries/pasta/: CMakeLists.txt
multiplier/: CMakeLists.txt
multiplier/src/: astbuilder.cpp  astbuilder.h  astgenerator.cpp  astgenerator.h  astindex.cpp  astindex.h  astmodel.cpp  astmodel.h  compilecommandsindex.cpp  compilecommandsindex.h  document.cpp  document.h  macos_utils.h  macos_utils.mm  main.cpp  mainwindow.cpp  mainwindow.h  parsedfilesindex.cpp  parsedfilesindex.h  sourcecodemodel.cpp  sourcecodemodel.h  textmodel.cpp  textmodel.h
multiplier/widgets/: CMakeLists.txt
(+4269 files in other folders)
